# prx-bwavfile

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: blits.rs
src/: bext.rs  cart.rs  chunks.rs  errors.rs  fact.rs  fmt.rs  fourcc.rs  lib.rs  mext.rs  mpeg.rs  mpeg_bwf.rs  parser.rs  wavereader.rs  wavewriter.rs
tests/: create_test_media.sh  ffprobe_media_tests.rs  integration_test.rs  test_media_cart.tgz  test_media_mpeg.tgz
