[package]
name = "prx-bwavfile"
version = "0.1.0"
authors = [
    "Jamie Hardt <jamiehardt@me.com>",
    "Ian Hobson <ian.r.hobson@gmail.com>",
    "Andrew Kuklewicz <andrew@prx.org>",
]
edition = "2018"
license = "MIT"
description = "Rust Broadcast-WAVE reader/writer with MP2/MPEG audio, EBU mext, AES46 cart chunk, and RF64 support. Fork of bwavfile."
homepage = "https://github.com/PRX/prx-bwavfile"
repository = "https://github.com/PRX/prx-bwavfile"
readme = "README.md"
categories = ["multimedia::audio", "parsing"]
keywords = ["audio", "broadcast", "bwf", "mpeg", "cart"]

[lib]
name = "bwavfile"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
dasp_sample = "0.11.0"
encoding = "0.2.33"
uuid = "0.8.1"
clap = "2.33.3"
mp3-metadata = "0.4.0"

[dev-dependencies]
serde_json = "1.0.61"

[profile.release]
debug = true

